--- a/blog.html
+++ b/blog.html
@@ -32,11 +32,12 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width light-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
-              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>  
+              <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
               <li><a href="blog.html">Insights</a></li>
               <li><a href="servicos.html">Serviços</a></li>
               <li><a href="industrias.html">Indústrias</a></li>
@@ -177,7 +178,7 @@
   <a class="btn-blue-ball btn-light anim-delay-1" href="#"><div class="btnball"><img class="btn-img" src="img/arrow-down.svg"></div><span>Ver Mais</span></a>
   </div>
 
-  <section class="blog section-3 animista fade-in-bottom">
+  <section class="blog section-3 animista fade-in-bottom anchor-point">
 
     <div class="larger-wrapper">
       <div class="row team align-center">
