--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -32,11 +32,12 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width light-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
-              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+              <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
               <li><a href="blog.html">Insights</a></li>
               <li><a href="servicos.html">Serviços</a></li>
               <li><a href="industrias.html">Indústrias</a></li>
@@ -80,19 +81,24 @@
       <!-- END Module Navigation-->
   </header>
 
-  <div class="larger-wrapper animista fade-in-bottom">
-    <div class="industry-banner anim-delay-1">
-      <span class="subtitle">INDÚSTRIAS | GRANDE DISTRIBUIÇÃO & CONSUMO</span>
-      <h2>Grande Distribuição<br> & Consumo</h2>
-    </div>
-  </div>
-
   <section class="industry-post section-1 animista fade-in-bottom">
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <span class="subtitle anim-delay-0-5 breadcrumbs"><a href="./industrias.html">INDÚSTRIAS</a> / GRANDE DISTRIBUIÇÃO & CONSUMO</span>
+        </div>
+      </div>
+    </div>
+    <div class="larger-wrapper animista fade-in-bottom">
+      <div class="industry-banner anim-delay-1">
+        <span class="subtitle">INDÚSTRIAS | GRANDE DISTRIBUIÇÃO & CONSUMO</span>
+        <h2>Grande Distribuição<br> & Consumo</h2>
+      </div>
+    </div>
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-right">
-            <span class="subtitle anim-delay-0-5">GRANDE DISTRIBUIÇÃO & CONSUMO</span>
             <h3><span class="anim-delay-0-6">A</span> <span class="anim-delay-0-7">nossa</span> <span class="anim-delay-0-8">experiência</span> <span class="anim-delay-0-9">no</span> <span class="anim-delay-0-10">sector</span> <span class="anim-delay-0-11">da</span> <span class="anim-delay-0-12">Grande</span> <span class="anim-delay-0-13">Distribuição</span> <span class="anim-delay-0-14">&</span> <span class="anim-delay-0-15">Consumo</span> <span class="anim-delay-0-16">é</span> <span class="anim-delay-0-17">diversa.</span> </h3>
           </div>
         </div>
@@ -105,7 +111,7 @@
       </div>
     </div>
   </section>
-
+  
   <section class="industry-post section-2 animista fade-in-bottom">
     <div class="larger-wrapper">
       <div class="row blue-square anim-delay-1">
@@ -127,7 +133,7 @@
     </div>
   </section>
 
-  <section class="industry-post section-3 animista fade-in-bottom">
+  <section class="industry-post section-3 animista fade-in-bottom anchor-point">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-9 col-md-9 col-sm-12">
