--- a/industrias.html
+++ b/industrias.html
@@ -32,11 +32,12 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width light-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
-              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+              <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
               <li><a href="blog.html">Insights</a></li>
               <li><a href="servicos.html">Serviços</a></li>
               <li><a href="industrias.html">Indústrias</a></li>
@@ -464,7 +465,7 @@
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
               <div class="col-lg-6 col-md-6 col-sm-12">
-                <h3>Não encontra o seu setor? Desafie-nos</h3>
+                <h3>Não encontra o seu setor?<br> Desafie-nos</h3>
                 <p>Fale connosco e veja o que podemos fazer pelo seu negócio</p>
                 <a class="btn-blue-ball btn-white-ball btn-dark blue-ball-inverted" href="./industria-grande-distribuicao-e-consumo.html"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
               </div>
@@ -476,7 +477,7 @@
       </div>
     </section>
 
-  <section class="industry section-3 animista fade-in-bottom">
+  <section class="industry section-3 animista fade-in-bottom anchor-point">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-9 col-md-9 col-sm-12">
