--- a/blogpost.html
+++ b/blogpost.html
@@ -32,11 +32,12 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width light-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
-              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+              <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
               <li><a href="blog.html">Insights</a></li>
               <li><a href="servicos.html">Serviços</a></li>
               <li><a href="industrias.html">Indústrias</a></li>
@@ -84,7 +85,7 @@
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <span class="subtitle anim-delay-0-1">INSIGHTS / ARTIGO</span>
+          <span class="subtitle anim-delay-0-1 breadcrumbs"><a href="./blog.html">INSIGHTS</a> / ARTIGO</span>
           <h2><span class="anim-delay-0-2">INOBUZZ:</span><br>
             <span class="anim-delay-0-3">Otimização</span> <span class="anim-delay-0-4">de</span> <span class="anim-delay-0-5">recursos</span><br> <span class="anim-delay-0-6">em</span> <span class="anim-delay-0-7">contexto</span> <span class="anim-delay-0-8">digital</span></h2>
         </div>
@@ -136,7 +137,7 @@
     </div>
   </section>
 
-  <section class="blogpost section-3 animista fade-in-bottom">
+  <section class="blogpost section-3 animista fade-in-bottom anchor-point">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 anim-delay-1">
