--- a/sobre.html
+++ b/sobre.html
@@ -32,11 +32,12 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width light-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
             <ul>
-              <li><a href="index.html"><img src="img/logo-light.svg"></a></li>
+              <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+              <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
               <li><a href="blog.html">Insights</a></li>
               <li><a href="servicos.html">Serviços</a></li>
               <li><a href="industrias.html">Indústrias</a></li>
@@ -193,7 +194,7 @@
     </div>
   </section>
 
-  <section class="about section-3 animista fade-in-bottom">
+  <section class="about section-3 animista fade-in-bottom anchor-point">
     <div class="wrapper">
       <div class="row align-bottom">
         <div class="col-lg-9 col-md-9 col-sm-12">
