--- a/servicos.html
+++ b/servicos.html
@@ -130,6 +130,30 @@
     </div>  
   </section>
 
+  <section class="services section-1 animista fade-in-bottom">
+    <div class="wrapper">
+      <button class="tablink" onclick="openPage('Tab1', this)" id="defaultOpen">Tab 1</button>
+      <button class="tablink" onclick="openPage('Tab2', this)">Tab 2</button>
+      <button class="tablink" onclick="openPage('Tab3', this)">Tab 3</button>
+      <button class="tablink" onclick="openPage('Tab4', this)">Tab 4</button>
+
+      <div id="Tab1" class="tabcontent">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac justo ac augue ullamcorper pharetra in in leo. Curabitur dictum a orci vitae dignissim.</p>
+      </div>
+
+      <div id="Tab2" class="tabcontent">
+        <p>Pellentesque viverra a arcu a dapibus. Morbi pretium quis lorem et malesuada. Sed cursus, nibh non ullamcorper mattis, tellus eros egestas nunc, in fermentum elit turpis eu ipsum. Integer suscipit augue sit amet lobortis egestas. Duis et velit ligula.</p>
+      </div>
+
+      <div id="Tab3" class="tabcontent">
+        <p>Cras in hendrerit arcu. Proin lacus risus, tempor iaculis orci et, egestas tempor enim. Etiam id risus condimentum, sagittis mauris id, dapibus arcu. Sed auctor lacus cursus, varius ligula sagittis, eleifend tellus. Vivamus a semper odio. Cras vitae erat tincidunt, mollis sapien sit amet, interdum libero.</p>
+      </div>
+
+      <div id="Tab4" class="tabcontent">
+        <p>Mauris nec suscipit nisl. Curabitur faucibus a felis lacinia scelerisque. Interdum et malesuada fames ac ante ipsum primis in faucibus. In eget commodo neque, vehicula molestie nulla.</p>
+      </div>
+  </section>
+
   <section class="services section-2">
     <div class="service-wrapper">
       <div class="row align-center">
