--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                   <li><a class="btn" href="contactos.html">Contactos</a></li>
               </ul>
           </nav>
-          <nav class="main-nav-mobile mobile">
-            <a href="index.html"><img src="img/logo-light.svg"></a>
+          <nav class="main-nav-mobile">
+            <a class="logo-dark" href="index.html"><img src="img/logo-dark.svg"></a>
+            <a class="logo-light" href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
