--- a/servicos.html
+++ b/servicos.html
@@ -35,19 +35,20 @@
       <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
-            <ul>
-              <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
-              <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
-              <li><a href="blog.html">Insights</a></li>
-              <li><a href="servicos.html">Serviços</a></li>
-              <li><a href="industrias.html">Indústrias</a></li>
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a class="btn" href="contactos.html">Contactos</a></li>
-            </ul>
+              <ul>
+                  <li class="logo-dark"><a href="index.html"><img src="img/logo-dark.svg"></a></li>
+                  <li class="logo-light"><a href="index.html"><img src="img/logo-light.svg"></a></li>
+                  <li><a href="blog.html">Insights</a></li>
+                  <li><a href="servicos.html">Serviços</a></li>
+                  <li><a href="industrias.html">Indústrias</a></li>
+                  <li><a href="sobre.html">Sobre</a></li>
+                  <li><a class="btn" href="contactos.html">Contactos</a></li>
+              </ul>
           </nav>
-          <nav class="main-nav-mobile mobile">
-            <a href="index.html"><img src="img/logo-light.svg"></a>
-            <div class="menu menu-light" onclick="myFunction(this)">
+          <nav class="main-nav-mobile">
+            <a class="logo-dark" href="index.html"><img src="img/logo-dark.svg"></a>
+            <a class="logo-light" href="index.html"><img src="img/logo-light.svg"></a>
+            <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
               <div class="bar3"></div>
