--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <li><a class="btn" href="contactos.html">Contactos</a></li>
               </ul>
           </nav>
-          <nav class="main-nav-mobile">
+          <nav class="main-nav-mobile mobile">
             <a class="logo-dark" href="index.html"><img src="img/logo-dark.svg"></a>
             <a class="logo-light" href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
@@ -243,7 +243,7 @@
   <section class="homepage section-2">
 
     <!-- Module Video Banner -->
-    <div class="animista slide-in-left" style="margin-bottom: 118px;">
+    <div class="animista slide-in-left">
       <div class="video-banner-wrap anim-delay-1">
         <video poster="./img/video-homepage.jpg">
           <source src="movie.mp4" type="video/mp4">
