--- a/servicos.html
+++ b/servicos.html
@@ -45,7 +45,7 @@
                   <li><a class="btn" href="contactos.html">Contactos</a></li>
               </ul>
           </nav>
-          <nav class="main-nav-mobile">
+          <nav class="main-nav-mobile mobile">
             <a class="logo-dark" href="index.html"><img src="img/logo-dark.svg"></a>
             <a class="logo-light" href="index.html"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
