btn's de footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -211,8 +211,12 @@
           <div class="col-lg-1 col-md-1 col-sm-12"></div>
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter anim-delay-4">
             <form>
-              <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <input class="desktop" type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
+              <a class="desktop" href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+            </form>
+            <form">
+              <input class="mobile type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email"><br>
+              <a class="mobile btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
             </form>
           </div>
         </div>
