--- a/contactos.html
+++ b/contactos.html
@@ -148,22 +148,26 @@
         </div>
       </div>
     </section>
-    <div class="footer-2">
+    <div class="footer-2 animista fade-in-bottom">
       <div class="wrapper">
         <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 footer-logo">
+          <div class="col-lg-12 col-md-12 col-sm-12 footer-logo anim-delay-1">
             <img src="img/logo-dark.svg">
           </div>
         </div>
         <div class="row align-center">
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <h4>A transformação do seu negócio<br> começa aqui e agora</h4>
+            <h4><span class="anim-delay-0-2">A</span> <span class="anim-delay-0-3">transformação</span> <span class="anim-delay-0-4">do</span> <span class="anim-delay-0-5">seu</span> <span class="anim-delay-0-6">negócio</span><br> <span class="anim-delay-0-7">começa</span> <span class="anim-delay-0-8">aqui</span> <span class="anim-delay-0-9">e</span> <span class="anim-delay-0-10">agora</span></h4>
           </div>
           <div class="col-lg-1 col-md-1 col-sm-12"></div>
-          <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
+          <div class="col-lg-5 col-md-5 col-sm-12 newsletter anim-delay-4">
             <form>
-              <input type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
-              <a href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+              <input class="desktop" type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email e receba conteúdos exclusivos"><br>
+              <a class="desktop" href=""><div class="btn-send"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span></a>
+            </form>
+            <form">
+              <input class="mobile type="text" id="newsletter" name="newsletter" placeholder="Insira o seu email"><br>
+              <a class="mobile btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
             </form>
           </div>
         </div>
