--- a/index.html
+++ b/index.html
@@ -410,15 +410,54 @@
             <a class="anim-delay-7" href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a></p>
           </div>
           <div class="col-lg-7 col-md-7 col-sm-12 order-first animista slide-in-right">
-            <div class="footer-form anim-delay-8">
-              <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos transformar<br> o seu negócio?</h2>
-              <form>
-                <input type="text" id="name" name="fname" placeholder="Nome*"><br>
-                <input type="text" id="email" name="mail" placeholder="Email*"><br>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
-                <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
-              </form>
+            <div class="form-slider">
+              <div class="footer-form form-slide1 anim-delay-8">
+                <span class="subtitle">FALE CONNOSCO</span>
+                <h2>Vamos transformar<br> o seu negócio?</h2>
+                <form>
+                  <input type="text" id="name" name="fname" placeholder="Nome*"><br>
+                  <input type="text" id="email" name="mail" placeholder="Email*"><br>
+                  <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
+                  <div class="row align-center">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                      <div class="counter"><span>01</span>/02</div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="footer-form form-slide2 anim-delay-8">
+                <span class="subtitle">FALE CONNOSCO</span>
+                <h2>Vamos transformar<br> o seu negócio?</h2>
+                <form>
+                  <input type="text" id="empresa" name="fname" placeholder="Empresa*"><br>
+                  <input type="text" id="colaboradores" name="mail" placeholder="Nº Colaboradores"><br>
+                  <label><input type="radio" id="newsletter" name="newsletter" value="newsletter">Quero subscrever a newsletter</label>
+                  <label><input type="radio" id="privacy" name="privacy" value="privacy">Li e aceito a <a href="#">Política de Privacidade</a></label>
+                  <div class="row align-center">
+                    <div class="col-lg-6 col-md-6 col-sm-6">
+                      <div class="counter"><span>02</span>/02</div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <div class="footer-form form-slide3 anim-delay-8">
+                <span class="subtitle">OBRIGADO</span>
+                <h2>Entraremos em<br> contacto consigo<br> com a maior<br> brevidade.</h2>
+                <div class="row align-center">
+                  <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="questions">TEM MAIS QUESTÕES?</div>
+                  </div>
+                  <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                    <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Fale connosco</span></a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
