--- a/servicos.html
+++ b/servicos.html
@@ -142,11 +142,14 @@
 
   <section class="services section-1 animista fade-in-bottom">
     <div class="wrapper">
-      <button class="tablink" onclick="openPage('Tab1', this)" id="defaultOpen">Tab 1</button>
-      <button class="tablink" onclick="openPage('Tab2', this)">Tab 2</button>
-      <button class="tablink" onclick="openPage('Tab3', this)">Tab 3</button>
-      <button class="tablink" onclick="openPage('Tab4', this)">Tab 4</button>
-
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 tab-container">
+          <button class="tablink" onclick="openPage('Tab1', this)" id="defaultOpen">Categoria 1</button>
+          <button class="tablink" onclick="openPage('Tab2', this)">Categoria 2</button>
+          <button class="tablink" onclick="openPage('Tab3', this)">Categoria 3</button>
+          <button class="tablink" onclick="openPage('Tab4', this)">Categoria 4</button>
+        </div>
+      </div>
       <div id="Tab1" class="tabcontent">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac justo ac augue ullamcorper pharetra in in leo. Curabitur dictum a orci vitae dignissim.</p>
       </div>
