--- a/index.html
+++ b/index.html
@@ -93,11 +93,17 @@
   </header>
 
   <section class="homepage section-0 slider">
+    
     <!-- Module Main Slider -->
     <div class="slider-wrap">
         <div class="slider" id="slider">
           <div class="holder">
             <div class="slide" id="slide-0">
+              <div class="fullscreen-bg">
+                <video loop muted autoplay poster="" class="fullscreen-bg__video">
+                  <source src="img/BannerSite_LowRes.mp4" type="video/mp4">
+                </video>
+              </div>
               <div class="slide-container">
               <div class="wrapper">
                 
