--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
-
+  <!--
   <script>
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'YOUR_SMARTSUPP_CODE';
@@ -35,6 +35,7 @@
       c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
     })(document);
     </script>
+    -->
 </head>
 
 <body>
@@ -100,8 +101,8 @@
           <div class="holder">
             <div class="slide" id="slide-0">
               <div class="fullscreen-bg">
-                <video loop muted autoplay poster="" class="fullscreen-bg__video">
-                  <source src="img/BannerSite_LowRes.mp4" type="video/mp4">
+                <video loop muted autoplay class="fullscreen-bg__video">
+                  <source src="/img/BannerSite_LowRes.mp4" type="video/mp4">
                 </video>
               </div>
               <div class="slide-container">
