--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;0,900;1,400&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
-  <!--
   <script>
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'YOUR_SMARTSUPP_CODE';
@@ -35,7 +34,6 @@
       c.src='//www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
     })(document);
     </script>
-    -->
 </head>
 
 <body>
@@ -418,50 +416,52 @@
           </div>
           <div class="col-lg-7 col-md-7 col-sm-12 order-first animista slide-in-right">
             <div class="form-slider">
-              <div class="footer-form form-slide1 anim-delay-8">
-                <span class="subtitle">FALE CONNOSCO</span>
-                <h2>Vamos transformar<br> o seu negócio?</h2>
-                <form>
-                  <input type="text" id="name" name="fname" placeholder="Nome*"><br>
-                  <input type="text" id="email" name="mail" placeholder="Email*"><br>
-                  <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
+              <div class="form-slider-wrapper">
+                <div class="footer-form">
+                  <span class="subtitle">FALE CONNOSCO</span>
+                  <h2>Vamos transformar<br> o seu negócio?</h2>
+                  <form>
+                    <input type="text" id="name" name="fname" placeholder="Nome*"><br>
+                    <input type="text" id="email" name="mail" placeholder="Email*"><br>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Telefone">
+                    <div class="row align-center">
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <a id="continue" class="btn-blue-ball btn-dark blue-ball-inverted"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                        <div class="counter"><span>01</span>/02</div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="footer-form">
+                  <span class="subtitle">FALE CONNOSCO</span>
+                  <h2>Vamos transformar<br> o seu negócio?</h2>
+                  <form>
+                    <input type="text" id="empresa" name="enterprise" placeholder="Empresa*"><br>
+                    <input type="text" id="colaboradores" name="colaboradores" placeholder="Nº Colaboradores"><br>
+                    <label><input type="radio" id="newsletter" name="newsletter" value="newsletter">Quero subscrever a newsletter</label>
+                    <label><input type="radio" id="privacy" name="privacy" value="privacy">Li e aceito a <a href="#">Política de Privacidade</a></label>
+                    <div class="row align-center">
+                      <div class="col-lg-6 col-md-6 col-sm-6">
+                        <div class="counter"><span>02</span>/02</div>
+                      </div>
+                      <div class="col-lg-6 col-md-6 col-sm-6 align-right">
+                        <a id="send" class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="footer-form">
+                  <span class="subtitle">OBRIGADO</span>
+                  <h2>Entraremos em<br> contacto consigo<br> com a maior<br> brevidade.</h2>
                   <div class="row align-center">
                     <div class="col-lg-6 col-md-6 col-sm-6">
-                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Continuar</span></a>
+                      <div class="questions">TEM MAIS QUESTÕES?</div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 align-right">
-                      <div class="counter"><span>01</span>/02</div>
+                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Fale connosco</span></a>
                     </div>
-                  </div>
-                </form>
-              </div>
-              <div class="footer-form form-slide2 anim-delay-8">
-                <span class="subtitle">FALE CONNOSCO</span>
-                <h2>Vamos transformar<br> o seu negócio?</h2>
-                <form>
-                  <input type="text" id="empresa" name="fname" placeholder="Empresa*"><br>
-                  <input type="text" id="colaboradores" name="mail" placeholder="Nº Colaboradores"><br>
-                  <label><input type="radio" id="newsletter" name="newsletter" value="newsletter">Quero subscrever a newsletter</label>
-                  <label><input type="radio" id="privacy" name="privacy" value="privacy">Li e aceito a <a href="#">Política de Privacidade</a></label>
-                  <div class="row align-center">
-                    <div class="col-lg-6 col-md-6 col-sm-6">
-                      <div class="counter"><span>02</span>/02</div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 align-right">
-                      <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Enviar</span></a>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="footer-form form-slide3 anim-delay-8">
-                <span class="subtitle">OBRIGADO</span>
-                <h2>Entraremos em<br> contacto consigo<br> com a maior<br> brevidade.</h2>
-                <div class="row align-center">
-                  <div class="col-lg-6 col-md-6 col-sm-6">
-                    <div class="questions">TEM MAIS QUESTÕES?</div>
-                  </div>
-                  <div class="col-lg-6 col-md-6 col-sm-6 align-right">
-                    <a class="btn-blue-ball btn-dark blue-ball-inverted" href="#"><div class="btnball btnball-white"><img class="btn-img" src="img/arrow-right-blue.svg"></div><span>Fale connosco</span></a>
                   </div>
                 </div>
               </div>
