--- a/servicos.html
+++ b/servicos.html
@@ -140,11 +140,11 @@
     </div>  
   </section>
 
-  <div class="services section-1 animista fade-in-bottom">
+  <div class="services section-1 animista fade-in-bottom" id="sticky-container">
     <div class="wrapper">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 tab-container">
-          <button class="tablink" onclick="openPage('Tab1', this)" id="defaultOpen">Categoria 1</button>
+      <div class="row tab-container relative-tabs">
+        <div class="col-lg-12 col-md-12 col-sm-12 tabs">
+          <button class="tablink active" onclick="openPage('Tab1', this)" id="defaultOpen">Categoria 1</button>
           <button class="tablink" onclick="openPage('Tab2', this)">Categoria 2</button>
           <button class="tablink" onclick="openPage('Tab3', this)">Categoria 3</button>
         </div>
@@ -838,6 +838,37 @@
     }
 
     document.getElementById("defaultOpen").click();
+
+      $( function() {
+        $(".tablink").click(function() {
+          if( $( this ).hasClass( 'active' ) ) {
+            return;
+          }
+
+          $(".tablink").removeClass( 'active' );
+          $( this ).addClass( 'active' );
+        });
+      });
+
+      $(document).ready(function() {
+      if($(window).width() > 999) {
+      $(document).scroll(function () {
+          if ($(document).scrollTop() >= ($("#sticky-container").offset().top)){
+              console.log(jQuery(document).scrollTop());
+              $('.tab-container').addClass('sticky-tabs').removeClass('relative-tabs');
+          } else {
+            $('.tab-container').addClass('relative-tabs').removeClass('sticky-tabs');
+              }
+          });
+      }
+      });
+
+    $(".tablink").click(function() {
+        $('html,body').animate({
+            scrollTop: $(".tabcontent").offset().top},
+            'slow');
+    });
+
   </script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
