--- a/servicos.html
+++ b/servicos.html
@@ -156,7 +156,7 @@
         <section class="services section-2">
           <div class="service-wrapper">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 animista slide-in-left">
+              <div class="col-lg-7 col-md-7 col-sm-12 animista fade-in-left">
                 <div class="img-label anim-delay-1">
                   <div class="blue-label"><span>Consultoria<br> & Estratégia</span></div>
                   <img class="img-fluid" src="img/01-servicos-img.jpg">
@@ -218,7 +218,7 @@
         <section class="services section-2">
           <div class="service-wrapper odd">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista slide-in-right">
+              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista fade-in-right">
                 <div class="img-label anim-delay-1">
                   <div class="blue-label"><span>Transformação<br> Digital</span></div>
                   <img class="img-fluid" src="img/02-servicos-img.jpg">
@@ -277,7 +277,7 @@
         <section class="services section-2">
           <div class="service-wrapper">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 animista slide-in-left">
+              <div class="col-lg-7 col-md-7 col-sm-12 animista fade-in-left">
                 <div class="img-label anim-delay-1">
                   <div class="blue-label"><span>Consumer<br> Insight</span></div>
                   <img class="img-fluid" src="img/03-servicos-img.jpg">
@@ -343,7 +343,7 @@
         <section class="services section-2">
           <div class="service-wrapper odd">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista slide-in-right">
+              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista fade-in-right">
                 <div class="img-label anim-delay-1">
                   <div class="blue-label"><span>Inovação<br> em Tecnologia</span></div>
                   <img class="img-fluid" src="img/04-servicos-img.jpg">
@@ -404,7 +404,7 @@
         <section class="services section-2">
           <div class="service-wrapper">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 animista slide-in-left">
+              <div class="col-lg-7 col-md-7 col-sm-12 animista fade-in-left">
                 <div class="img-label anim-delay-1">
                  <div class="blue-label"><span>Criatividade</span></div>
                  <img class="img-fluid" src="img/05-servicos-img.jpg">
@@ -467,7 +467,7 @@
         <section class="services section-2">
           <div class="service-wrapper odd">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista slide-in-right">
+              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista fade-in-right">
                 <div class="img-label anim-delay-1">
                   <div class="blue-label"><span>Marketing</span></div>
                   <img class="img-fluid" src="img/06-servicos-img.jpg">
@@ -532,7 +532,7 @@
         <section class="services section-2">
           <div class="service-wrapper">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 animista slide-in-left">
+              <div class="col-lg-7 col-md-7 col-sm-12 animista fade-in-left">
                 <div class="img-label">
                   <div class="blue-label"><span>Formação</span></div>
                   <img class="img-fluid" src="img/06-servicos-img.jpg">
@@ -591,7 +591,7 @@
         <section class="services section-2">
           <div class="service-wrapper odd">
             <div class="row align-center">
-              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista slide-in-right">
+              <div class="col-lg-7 col-md-7 col-sm-12 go-right animista fade-in-right">
                 <div class="img-label anim-delay-1">
                   <div class="blue-label"><span>E-commerce<br> Performance</span></div>
                   <img class="img-fluid" src="img/06-servicos-img.jpg">
