--- a/contactos.html
+++ b/contactos.html
@@ -133,7 +133,7 @@
   </section>
 
   <footer>
-    <section class="footer-1 animista fade-in-bottom">
+    <section class="contact footer-1 animista fade-in-bottom">
       <div class="wrapper">
         <div class="row align-center">
           <div class="col-lg-5 col-md-5 col-sm-12 order-second">
