--- a/industrias.html
+++ b/industrias.html
@@ -105,7 +105,7 @@
     
     <div class="larger-wrapper">
       <div class="row banner-img">
-        <div class="col-lg-11 col-md-11 col-sm-12 animista fade-in-left">
+        <div class="col-lg-11 col-md-11 col-sm-12 animista slide-in-left">
             <img class="img-fluid anim-delay-5" src="img/00-servicos-img.jpg">
         </div>
         <div class="col-lg-1 col-md-1"></div>
@@ -146,13 +146,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
     </button>
       <div class="panel active">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -175,13 +175,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -204,13 +204,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -231,13 +231,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -260,13 +260,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -290,13 +290,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -319,13 +319,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -348,13 +348,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -377,13 +377,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -405,13 +405,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -434,13 +434,13 @@
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/01-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -464,13 +464,13 @@
         <div class="btn-go"><img src="img/arrow-right-blue.svg"></div>
       </button>
       <div class="panel always-open">
-        <div class="row animista fade-in-right">
+        <div class="row animista slide-in-right">
           <div class="col-lg-7 col-md-7 col-sm-12"></div>
             <div class="col-lg-5 col-md-5 col-sm-12 anim-delay-2">
               <img class="img-fluid" src="img/12-accordion-img.jpg">
             </div>
         </div>
-        <div class="row offset-panel-blue animista fade-in-left">
+        <div class="row offset-panel-blue animista slide-in-left">
           <div class="col-lg-8 col-md-8 col-sm-12">
             <div class="row accordion-blue anim-delay-1">
               <div class="col-lg-2 col-md-2 col-sm-12"></div>
@@ -576,9 +576,9 @@
             <p><a class="anim-delay-6" href="tel:+351211383266">(+351) 211 383 266</a><br>
             <a class="anim-delay-7" href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a></p>
           </div>
-          <div class="col-lg-7 col-md-6 col-sm-12 order-first animista fade-in-right">
-            <div class="form-fader">
-              <div class="form-fader-wrapper">
+          <div class="col-lg-7 col-md-6 col-sm-12 order-first animista slide-in-right">
+            <div class="form-slider">
+              <div class="form-slider-wrapper">
                 <div class="footer-form">
                   <span class="subtitle">FALE CONNOSCO</span>
                   <h2>Vamos transformar<br> o seu negócio?</h2>
